# nvm

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/nvm/: Cargo.toml
crates/nvm-cmd/: Cargo.toml
crates/nvm-cmd/src/: cmd_clean.rs  cmd_install.rs  cmd_list_local.rs  cmd_list_remote.rs  cmd_uninstall.rs  cmd_use.rs  lib.rs
crates/nvm-core/: Cargo.toml
crates/nvm-core/src/: consts.rs  lib.rs  local.rs  remote.rs  semver.rs  utils.rs
crates/nvm/src/: cli.rs  main.rs
crates/nvm/src/cmd/: cmd_clean.rs  cmd_env.rs  cmd_install.rs  cmd_list_local.rs  cmd_list_remote.rs  cmd_uninstall.rs  cmd_use.rs  mod.rs
nvm/: Cargo.toml
nvm-common/: Cargo.toml
nvm-common/src/: dist.rs  lib.rs  path.rs
nvm-core/: Cargo.toml
nvm-core/src/: local.rs  remote.rs  utils.rs
nvm-local/: Cargo.toml
nvm-local/src/: lib.rs
nvm-remote/: Cargo.toml
nvm-remote/src/: lib.rs
nvm/src/: cmd.rs  cmd_env.rs  cmd_install.rs  cmd_list_local.rs  cmd_list_remote.rs  cmd_uninstall.rs  cmd_use.rs  main.rs
nvm/src/cmd/: cmd_clean.rs  cmd_install.rs  cmd_list_local.rs  cmd_list_remote.rs  cmd_uninstall.rs  cmd_use.rs  mod.rs
src/: cli.rs  cmd.rs  lib.rs  local.rs  main.rs  mirror.rs  remote.rs  semver.rs  utils.rs
src/cli/: core.rs  mod.rs
src/cli/cmd/: cmd_install.rs  cmd_list.rs  cmd_list_remote.rs  cmd_uninstall.rs  cmd_use.rs  mod.rs
src/cmd/: clean.rs  cmd_clean.rs  cmd_env.rs  cmd_install.rs  cmd_list_local.rs  cmd_list_remote.rs  cmd_uninstall.rs  cmd_use.rs  install.rs  list_local.rs  list_remote.rs  mod.rs  uninstall.rs  use.rs
src/core/: consts.rs  local.rs  mod.rs  query.rs  remote.rs  semver.rs  types.rs  utils.rs  web.rs
src/core/utils/: file.rs  misc.rs  mod.rs  path.rs  semver.rs  url.rs
src/nvm/: cli.py  cmd.py  config.py  consts.py  op_local.py  op_remote.py  semver.py
tests/: test_semver.py
