[package]
name = "nvm"
version = "0.5.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
semver = "1.0.21"
serde = { version = "1.0.195", features = ["derive"] }
homedir = "0.2.1"
colored = "2.1.0"
anyhow = "1.0.86"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
sevenz-rust = "0.5.4"

[profile.release]
opt-level = 'z'
