[package]
name = "nvm"
version = "0.7.4"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"

clap = { version = "4.4.18", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
indicatif = "0.18.3"

glob = "0.3.3"
homedir = "0.3.6"
junction = "1.2.0"

semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }

sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
sevenz-rust = "0.6.1"

[target.'cfg(unix)'.dependencies]
tar = "0.4.44"
xz2 = "0.1.7"
