[project]
name = "nvm"
version = "0.4.2"
description = "Nodejs Version Manager"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
 "mashumaro[orjson,toml]>=3.15",
 "requests>=2.32.3",
 "semver>=3.0.4",
]

[project.scripts]
nvm = "nvm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.ruff]
lint.select = ["I"]
