[package]
name = "nvm-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
homedir = "0.3.6"
indicatif = "0.18.3"
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
sha2 = "0.10.9"
glob = "0.3.3"

[target.'cfg(windows)'.dependencies]
sevenz-rust = "0.6.1"

[target.'cfg(unix)'.dependencies]
tar = "0.4.44"
xz2 = "0.1.7"
