[package]
name = "nvm-local"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

indicatif = "0.18.3"
sha2 = "0.10.9"
glob = "0.3.3"

nvm-common = { path = "../nvm-common/" }

[target.'cfg(windows)'.dependencies]
sevenz-rust = "0.6.1"

[target.'cfg(unix)'.dependencies]
tar = "0.4.44"
xz2 = "0.1.7"
