[package]
name = "nvm-remote"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

serde = { version = "1.0.228", features = ["derive"] }
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
sha2 = "0.10.9"

nvm-common = { path = "../nvm-common/" }
