[package]
name = "nvm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

clap = { version = "4.4.18", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
junction = "1.2.0"

nvm-common = { path = "../nvm-common/" }
nvm-local = { path = "../nvm-local/" }
nvm-remote = { path = "../nvm-remote/" }
