[package]
name = "nvm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = "1.0.21"
serde = { version = "1.0.195", features = ["derive"] }
homedir = "0.2.1"
anyhow = "1.0.86"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
sha2 = "0.10.8"
glob = "0.3.2"

[target.'cfg(windows)'.dependencies]
sevenz-rust = "0.5.4"
